:sparkles:(examples): support COOKIE_KEY env

--- a/examples/dev/docker-compose.yml
+++ b/examples/dev/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       USER_AVATAR: avatar_url
       # 
       ALLOW_USERNAMES: whatwewant
+      # Cookie Secret
+      COOKIE_SECRET: whatwewant
     volumes:
       - ../../src:/usr/local/openresty/lualib/oauth
 
