--- a/examples/providers/dev/docker-compose.yml
+++ b/examples/providers/dev/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   auth:
     restart: always
     build:
-      context: ../..
+      context: ../../..
       dockerfile: Dockerfile
     ports:
       - 8080:80
