--- a/examples/services/gerapy/docker-compose.yml
+++ b/examples/services/gerapy/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   auth:
     restart: always
     build:
-      context: ../..
+      context: ../../..
       dockerfile: Dockerfile
     # image: whatwewant/openresty-oauth2.0
     ports:
