--- a/examples/providers/gitee/docker-compose.yml
+++ b/examples/providers/gitee/docker-compose.yml
@@ -17,29 +17,31 @@ services:
       # PROXY_READ_TIMEOUT: 60s
       # WORKER_PROCESSES: auto
       PROXY_PASS: http://web:8080
+      ROOT_URL: http://127.0.0.1:8080
+      PROVIDER: gitee
       CLIENT_ID: dead85f1127ebbca9890a39057f5e5e5a28271333cd35483c7d30513044ce4b3
       CLIENT_SECRET: CHANGE_CLIENT_SECRET
-      REDIRECT_URI: http://127.0.0.1:8080/_oauth/gitee
-      SCOPE: ''
+      # REDIRECT_URI: http://127.0.0.1:8080/_oauth/gitee
+      # SCOPE: ''
       #
-      AUTHORIZE_URL: https://gitee.com/oauth/authorize
-      TOKEN_URL: https://gitee.com/oauth/token
-      USER_INFO_URL: https://gitee.com/api/v5/user
-      #
-      TOKEN_DATA_IN_BODY: 1
-      #
-      USER_INFO_QUERY: access_token
-      #
-      USER_USERNAME: login
-      USER_NICKNAME: name
-      # USER_EMAIL: email
-      USER_AVATAR: avatar_url
+      # AUTHORIZE_URL: https://gitee.com/oauth/authorize
+      # TOKEN_URL: https://gitee.com/oauth/token
+      # USER_INFO_URL: https://gitee.com/api/v5/user
+      # #
+      # TOKEN_DATA_IN_BODY: 1
+      # #
+      # USER_INFO_QUERY: access_token
+      # #
+      # USER_USERNAME: login
+      # USER_NICKNAME: name
+      # # USER_EMAIL: email
+      # USER_AVATAR: avatar_url
       # 
       ALLOW_USERNAMES: whatwewant
       # Cookie Secret
       COOKIE_SECRET: whatwewant
     volumes:
-      - ../../../src:/usr/local/openresty/lualib/oauth
+      - ../../../packages:/usr/local/openresty/lualib/oauth
 
   web:
     image: nginx:1.17.2-alpine
