--- a/examples/providers/doreamon/docker-compose.yml
+++ b/examples/providers/doreamon/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       PROVIDER: doreamon
       CLIENT_ID: ${CLIENT_ID}
       CLIENT_SECRET: ${CLIENT_SECRET}
-      # REDIRECT_URI: http://127.0.0.1:8080/_oauth/github
+      # REDIRECT_URI: http://127.0.0.1:8080/login/github/callback
       SCOPE: user
       #
       # AUTHORIZE_URL: https://github.com/login/oauth/authorize
