--- a/examples/services/gerapy/docker-compose.yml
+++ b/examples/services/gerapy/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       PROXY_PASS: http://gerapy:8000
       CLIENT_ID: dc766a78a82e79b72000
       CLIENT_SECRET: CHANGE_CLIENT_SECRET
-      REDIRECT_URI: http://127.0.0.1:8080/_oauth/github
+      REDIRECT_URI: http://127.0.0.1:8080/login/github/callback
       SCOPE: ''
       #
       AUTHORIZE_URL: https://github.com/login/oauth/authorize
